
2004/04/01: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added plugin loading functions to GWEN_DBIO


2004/03/31: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added import/export framework for GWEN_DBs. This makes parser plugins
  based on GWEN_DBs much easier.


2004/03/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- reintroduced my old win32 target, since the one of Christian doesn't work
  the way I need it: It needs to build all objects/libraries again, and that
  simply takes too much time. Another problem is that my configure options
  are not used when creating the windows binaries (i.e. that makes using the
  same target in the project simthetic useless for my local system).
  So I now use my old approach which is simple, ugly but it works ;-)
  Christian may still use his target (which is now called "win32-cs") ;-)
- updated README.W32 to reflect the changes below


2004/03/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- changed the way a DLL is created:
    Now the libXXX.a library is taken (which - thanks to libtool - already
    contains all object files needed for building the DLL) and all the
    object files in the ".libs" folder of the toplevel library (because
    for any strange reasons they are not included with the toplevel library).
    This removes the need of enlisting all object files in the toplevel
    library Makefile.am (and because compiling under Windoze takes a veeery
    veeeery long time this is quite a helper ;-)
  
  Oh, just a quick note: At least my version of automake is quite buggy when
  it comes to "DIST_SUBDIRS" variables inside a toplevel source folder.
  I tried to put the test folder into such a variable but then "make dist"
  only includes about the half of the project into the resulting tarball :-/