@@ -1,7 +1,15 @@
 INCLUDES=@all_includes@
 
+if IS_WINDOWS
 noinst_PROGRAMS=gwentest
 gwentest_SOURCES=gwentest.c
 gwentest_LDADD=-L/mingw/lib -L../src @gwenhywfar_libs@
 
 EXTRA_DIST = README.MSVC gwentest.vcproj
+
+else
+
+EXTRA_DIST = README.MSVC gwentest.vcproj gwentest.c
+
+endif
+
